name:                aoc2018
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/TRManderson/aoc2018#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Manderson
maintainer:          me@trm.io
copyright:           2018 Tom Manderson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day1a
  hs-source-dirs:      src
  main-is:             Day1A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day1b
  hs-source-dirs:      src
  main-is:             Day1B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers

executable day2a
  hs-source-dirs:      src
  main-is:             Day2A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers

executable day2b
  hs-source-dirs:      src
  main-is:             Day2B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day3a
  hs-source-dirs:      src
  main-is:             Day3A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , transformers
                     , lens
                     , parsec

executable day3b
  hs-source-dirs:      src
  main-is:             Day3B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , transformers
                     , lens
                     , parsec

executable day4a
  hs-source-dirs:      src
  main-is:             Day4A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , array
                     , containers
                     , transformers
                     , megaparsec

executable day4b
  hs-source-dirs:      src
  main-is:             Day4B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , array
                     , containers
                     , transformers
                     , megaparsec

executable day5a
  hs-source-dirs:      src
  main-is:             Day5A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day5b
  hs-source-dirs:      src
  main-is:             Day5B.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , parallel

executable day7a
  hs-source-dirs:      src
  main-is:             Day7A.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , fgl

executable day8a
  hs-source-dirs:      src
  main-is:             Day8A.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , megaparsec

executable day8b
  hs-source-dirs:      src
  main-is:             Day8B.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , megaparsec

executable day9a
  hs-source-dirs:      src
  main-is:             Day9A.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , pointedlist
                     , lens
                     , transformers
                     , array

executable day9b
  hs-source-dirs:      src
  main-is:             Day9B.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , pointedlist
                     , lens
                     , transformers
                     , array